flipclock css was overlaying nav bar - fixed with z-index = 10

--- a/css/app.css
+++ b/css/app.css
@@ -2180,7 +2180,7 @@ body {
   position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 10;
 }
 
 .nav__title {
